<resources>
    <string name="app_name">Docs Updater</string>

    <string name="bottom_sheet_header">New</string>

    /**********************Text View Text***********************/

    <string name="textView_id_card">ID Card</string>
    <string name="textView_passport">Passport</string>
    <string name="textView_license">License</string>
    <string name="textView_bank_details">Bank</string>
    <string name="textView_medical_details">Medical</string>
    <string name="textView_school_and_university_degree">Degree</string>

    /**********************Image Button Content Description*************/

    <string name="content_description_id_card">Identity Card</string>
    <string name="content_description_passport">Passport</string>
    <string name="content_description_license">Driving License Card</string>
    <string name="content_description_bank_account">Bank Details</string>
    <string name="content_description_medical_details">Medical Details</string>
    <string name="content_description_school_and_university_degree">Degree</string>


    /************************Hint For EditText*********************************/

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_id_number">Id Number</string>
    <string name="hint_doi">Date Of Issue(MM/DD/YYYY)</string>
    <string name="hint_doc_name">Document Name</string>


    /*****************Over Flow Menu************************************/

    <string name="overflowmenu_newfolder">New Folder</string>
    <string name="overflowmenu_gridview">Grid View</string>
    <string name="overflowmenu_sortby">Sort By</string>
    <string name="title_activity_settings">Settings</string>

    /*********************activity_identity_card_form**********************/

    <string name="button_submit">Submit</string>


    /*******************context menu activity_main***********************/
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>


</resources>
