<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context="com.a000webhostapp.docsforlife.docsupdater.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/bottom_Sheet_View"
    android:paddingBottom="35dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/bottom_sheet_header"
            android:textSize="20sp" />

    </RelativeLayout>


    <ImageButton
        android:id="@+id/button_id_card"
        style="@style/ImageButton_BackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_description_id_card"
        android:onClick="onButtonClicked"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_perm_identity_black_24dp" />

    <ImageButton
        android:id="@+id/button_passport"
        style="@style/ImageButton_BackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_description_passport"
        android:onClick="onButtonClicked"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_flight_takeoff_black_24dp" />

    <ImageButton
        android:id="@+id/button_license"
        style="@style/ImageButton_BackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_description_license"
        android:onClick="onButtonClicked"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_directions_car_black_24dp" />

    <TextView
        android:id="@+id/textView_id_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_id_card"
        android:layout_below="@+id/button_id_card"
        android:layout_marginStart="11dp"
        android:text="@string/textView_id_card" />

    <TextView
        android:id="@+id/textView_Passport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_passport"
        android:layout_centerHorizontal="true"
        android:text="@string/textView_passport" />

    <TextView
        android:id="@+id/textView_License"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_Degree"
        android:layout_below="@+id/button_license"
        android:text="@string/textView_license" />

    <ImageButton
        android:id="@+id/button_bank_Account"
        style="@style/ImageButton_BackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_id_card"
        android:layout_alignTop="@+id/button_Hospital"
        android:contentDescription="@string/content_description_bank_account"
        android:onClick="onButtonClicked"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_account_balance_black_24dp" />

    <ImageButton
        android:id="@+id/button_Hospital"
        style="@style/ImageButton_BackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_passport"
        android:layout_below="@+id/textView_Passport"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/content_description_medical_details"
        android:onClick="onButtonClicked"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_local_hospital_black_24dp" />

    <ImageButton
        android:id="@+id/button_Degree"
        style="@style/ImageButton_BackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_license"
        android:layout_alignTop="@+id/button_Hospital"
        android:contentDescription="@string/content_description_school_and_university_degree"
        android:onClick="onButtonClicked"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_school_black_24dp" />

    <TextView
        android:id="@+id/textView_Bank_Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_id_Card"
        android:layout_alignStart="@+id/textView_id_Card"
        android:layout_below="@+id/button_bank_Account"
        android:textAlignment="center"
        android:text="@string/textView_bank_details" />

    <TextView
        android:id="@+id/textView_Hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_Hospital"
        android:layout_centerHorizontal="true"
        android:text="@string/textView_medical_details" />

    <TextView
        android:id="@+id/text_Degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_Degree"
        android:layout_below="@+id/button_Degree"
        android:layout_marginEnd="11dp"
        android:text="@string/textView_school_and_university_degree" />


</RelativeLayout>
